--- a/css/bicicleta.css
+++ b/css/bicicleta.css
@@ -17,7 +17,7 @@
 }
 
 .titulo div {
-  background: url(./img/dec/top-right.svg) no-repeat top right 20px;
+  background: url(../img/dec/top-right.svg) no-repeat top right 20px;
 }
 
 @media (max-width: 1200px) {
@@ -35,7 +35,7 @@
   gap: 40px;
   padding-top: 60px;
   padding-bottom: 60px;
-  background: url(./img/dec/top-right.svg) no-repeat top 40px right 20px;
+  background: url(../img/dec/top-right.svg) no-repeat top 40px right 20px;
 }
 
 .bicicletas-imagem {
@@ -123,7 +123,7 @@ p {
   width: 18px;
   height: 10px;
   margin-left: 12px;
-  background: url(./img/icones/seta.svg);
+  background: url(../img/icones/seta.svg);
   transition: transform 0.2s;
 }
 
