--- a/css/bicicletabase.css
+++ b/css/bicicletabase.css
@@ -211,7 +211,7 @@
   font: 500 1.125rem/1.35 "Roboto", sans-serif;
 }
 
-.seguro-bg {
+.seguro-bg2 {
   background-color: var(--cor-11);
   box-shadow: inset 0 120px var(--cor-0), inset 0 -120px var(--cor-12);
 }
