--- a/css/contato.css
+++ b/css/contato.css
@@ -5,8 +5,8 @@
 
 .contato-dados {
   border-radius: 5px 0 0 5px;
-  background: var(--cor-12) url(./img/dec/bottom-left.svg) no-repeat bottom 20px
-    left 20px;
+  background: var(--cor-12) url(../img/dec/bottom-left.svg) no-repeat bottom
+    20px left 20px;
 }
 
 .contato-dados h2 {
@@ -18,7 +18,7 @@
 .contato-endereco {
   margin-bottom: 32px;
   padding-left: 28px;
-  background: url(./img/icones/local.svg) no-repeat 0px 2px;
+  background: url(../img/icones/local.svg) no-repeat 0px 2px;
   color: var(--cor-4);
   font: 400 1rem/1.5 "Roboto", sans-serif;
 }
@@ -42,7 +42,7 @@
 }
 
 .contato-meios a:nth-child(1) {
-  background: url(./img/icones/email.svg) no-repeat 0px 2px;
+  background: url(../img/icones/email.svg) no-repeat 0px 2px;
 }
 
 .contato-meios a:nth-child(2) {
@@ -50,7 +50,7 @@
 }
 
 .contato-meios a:nth-child(3) {
-  background: url(./img/icones/telefone.svg) no-repeat 0px 2px;
+  background: url(../img/icones/telefone.svg) no-repeat 0px 2px;
   margin-bottom: 60px;
 }
 
@@ -62,8 +62,8 @@
 
 .contato-formulario {
   border-radius: 0 5px 5px 0;
-  background: var(--cor-0) url(./img/dec/bottom-right.svg) no-repeat bottom 20px
-    right 20px;
+  background: var(--cor-0) url(../img/dec/bottom-right.svg) no-repeat bottom
+    20px right 20px;
 }
 
 .contato-dados,
