--- a/css/index.css
+++ b/css/index.css
@@ -284,8 +284,8 @@
   flex-direction: column;
   overflow: hidden;
   align-items: end;
-  background: url(img/dec/top-left-p.svg) no-repeat top 40px left 40px,
-    url(img/dec/bottom-right-p.svg) no-repeat bottom 40px right 40px;
+  background: url(../img/dec/top-left-p.svg) no-repeat top 40px left 40px,
+    url(../img/dec/bottom-right-p.svg) no-repeat bottom 40px right 40px;
 }
 
 .conteudo {
@@ -348,7 +348,6 @@
   grid-column: 1/-1;
   color: var(--cor-0);
   font: 600 4rem/1.125 "Poppins", sans-serif;
-  font-size: 3rem;
 }
 
 .seguros-item {
