--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .intro-bg {
-  background: var(--cor-12) url(./img/dec/bottom-left.svg) no-repeat bottom 40px
-    left 20px;
+  background: var(--cor-12) url(../img/dec/bottom-left.svg) no-repeat bottom
+    40px left 20px;
   box-shadow: inset 0 -120px var(--cor-0);
 }
 
@@ -331,8 +331,8 @@
 }
 
 .seguro-bg {
-  background: var(--cor-11) url(./img/dec/bottom-left.svg) no-repeat bottom 40px
-    left 20px;
+  background: var(--cor-11) url(../img/dec/bottom-left.svg) no-repeat bottom
+    40px left 20px;
 }
 
 .seguros {
@@ -406,7 +406,7 @@
   left: -21px;
   width: 13px;
   height: 9px;
-  background-image: url(./img/icones/lista.svg);
+  background-image: url(../img/icones/lista.svg);
 }
 
 .seguros-item a {
