otimizado para producao

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 @import url("./bicicleta.css");
 @import url("./bicicletabase.css");
 @import url("./seguro.css");
-@import url("orcamento.css");
+@import url("./orcamento.css");
 @import url("./termos.css");
 @import url("./contato.css");
+@import url("./animacao.css");
