--- a/css/bicicletabase.css
+++ b/css/bicicletabase.css
@@ -9,7 +9,7 @@
   gap: 40px;
   padding-top: 60px;
   padding-bottom: 60px;
-  background: url(./img/dec/bottom-left.svg) no-repeat bottom 40px left 20px;
+  background: url(../img/dec/bottom-left.svg) no-repeat bottom 40px left 20px;
 }
 
 .bicicleta-titulo {
@@ -232,7 +232,7 @@
 .seguro-conteudo {
   padding-top: 180px;
   padding-bottom: 180px;
-  background: url(./img/dec/bottom-right.svg) no-repeat bottom 180px right 20px;
+  background: url(../img/dec/bottom-right.svg) no-repeat bottom 180px right 20px;
 }
 
 .seguro h2 {
