--- a/css/seguro.css
+++ b/css/seguro.css
@@ -173,16 +173,20 @@
   border-radius: 4px;
 }
 
-.perguntas dt {
+.perguntas button {
   display: grid;
   grid-template-columns: auto 1fr auto;
   gap: 8px;
   align-items: center;
   cursor: pointer;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
 }
 
-.perguntas dt::before {
+.perguntas button::before {
   content: "";
   display: inline-block;
   width: 12px;
@@ -190,17 +194,25 @@
   background: var(--cor-p1);
 }
 
-.perguntas dt::after {
+.perguntas button::after {
   content: "";
-  display: block;
+  display: inline-block;
   width: 14px;
   height: 6px;
   background: url(../img/icones/seta-abrir.svg) no-repeat right;
   transition: 0.3s;
+}
+
+.perguntas button:hover:after,
+.perguntas button[aria-expanded="true"]::after {
   transform: rotate(180deg);
 }
 
-.perguntas dd {
+.js .perguntas dd.ativa {
+  display: block;
+}
+
+.js .perguntas dd {
   padding-left: 20px;
   padding-top: 16px;
   max-width: 80ch;
